--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,2 +1,6 @@
 <h1><%= title %></h1>
 <p>Welcome to <%= title %></p>
+
+<div>
+    <a href="/celebrities/create">Add a new celebrity to your list</a>
+</div>
