--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,3 +4,7 @@
 <div>
     <a href="/celebrities/create">Add a new celebrity to your list</a>
 </div>
+
+<div>
+    <a href="/celebrities">Check out your celebrity list</a>
+</div>
