--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,3 +8,11 @@
 <div>
     <a href="/celebrities">Check out your celebrity list</a>
 </div>
+
+<div>
+    <a href="/movies/create">Add a new movie to your list</a>
+</div>
+
+<div>
+    <a href="/movies">Check out your movies list</a>
+</div>
