--- a/views/movies/movies.ejs
+++ b/views/movies/movies.ejs
@@ -1,1 +1,7 @@
-<h1>HELLO!</h1>
+<h2>Your Movies List</h2>
+
+<% movies.forEach(movie => { %>
+    <div>
+      <p> <%= movie.title %> </p>
+    </div>
+<% }) %>
