--- a/views/celebrities/new-celebrity.ejs
+++ b/views/celebrities/new-celebrity.ejs
@@ -4,5 +4,5 @@
     <input type="text" placeholder="Celeb Name" name="name"/>
     <input type="text" placeholder="Celeb Occupation" name="occupation"/>
     <input type="text" placeholder="Celeb Catch Phrase" name="catchPhrase"/>
-    <button type="submit">Add</button>
+    <button type="Submit">Add</button>
 </form>
